# Gatekeeper

./: .env.example  .gitignore  .gitleaksignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY_FINDINGS.md  fly.toml  pyproject.toml  requirements-dev.txt  version.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  sast.yml  secret-scan.yml  web.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/mobile/: app.json  jest.setup.ts  package-lock.json  package.json
apps/web/: .dockerignore  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
backend/: requirements.txt
backend/app/: logging.py  main.py
backend/data/: factions.json  landmarks.json  position2d.json
backend/starmap/: ingest_sde.py  refresh_cache.py
docs/: API_USAGE_GUIDE.md  DEPLOYMENT.md  MONITORING.md  gatekeeper-intel-spec.md
examples/: api_integration_examples.py  gatekeeper_client.py  websocket_client.py
helm/eve-gatekeeper/: .helmignore  Chart.yaml  values.yaml
k6/: README.md  load-test.js  smoke-test.js  stress-test.js
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
monitoring/: alerts.yml
scripts/: generate_universe.py  setup-secrets.sh
streamlit/: README.md  app.py  requirements.txt  ruff.toml
streamlit/modules/: __init__.py  config.py  map_renderer.py  route_panel.py
tests/: conftest.py
tests/integration/: conftest.py  test_ai_api.py  test_avoidance_api.py  test_bookmarks_api.py  test_bridges_api.py  test_fatigue_api.py  test_intel_api.py  test_jump_api.py  test_legacy_routes.py  test_links_api.py  test_mcp_integration.py  test_notes_api.py  test_pagination_api.py  test_pochven_api.py  test_route_compare_api.py  test_route_history_api.py  test_routing_api.py  test_sharing_api.py  test_ship_profiles_api.py  test_stats_integration.py  test_systems_api.py  test_thera_api.py  test_waypoint_api.py  test_webhooks_api.py
tests/unit/: test_admin.py  test_ai_analyzer.py  test_alerts.py  test_appraisal.py  test_arbitrage.py  test_auth.py  test_auth_routes.py  test_avoidance_service.py  test_billing.py  test_bookmarks.py  test_cache.py  test_character_api.py  test_characters.py  test_collaborative_sessions.py  test_config.py  test_connection_manager.py  test_database.py  test_db_models.py  test_dependencies.py  test_external_links.py  test_fitting.py  test_fitting_service.py  test_fleet_analyzer.py  test_fleet_tracker.py  test_fw_cache.py  test_hotzone.py  test_intel_chat_parser.py  test_intel_parser.py  test_jump_fatigue.py  test_jumpbridge.py  test_jumpbridge_connections.py  test_jwt_service.py  test_kill_history.py  test_logging.py  test_main.py  test_map.py  test_map_visualization_service.py  test_mcp.py  (+37 more)
(+384 files in other folders)
